[package]
name = "rsprobe"
description = "MpegTS Stream Analysis Probe with Kafka and GStreamer"
keywords = ["broadcast", "mpegts", "pcap", "kafka", "gstreamer"]
categories = ["command-line-utilities"]
readme = "README.md"
license-file = "LICENSE"
homepage = "https://github.com/groovybits/rscap"
repository = "https://github.com/groovybits/rscap"
authors = ["Chris Kennedy"]
version = "0.7.4"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
default = []
dpdk_enabled = ["capsule"]
gst = ["img_hash", "opencv", "gstreamer", "gstreamer-app", "gstreamer-video"]

[profile.release-with-debug]
inherits = "release"
debug = true

[dependencies]
capsule = { version = "0.1.5", optional = true }
pcap = { version = "1.1.0", features = ["all-features", "capture-stream"] }
futures = "0.3"
log = "0.4"
env_logger = "0.9"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
lazy_static = "1.4.0"
clap = { version = "4.4.11", features = ["derive", "env"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
anyhow = "1.0.79"
sysinfo = "0.23.9"
once_cell = "1.5.2"
ahash = "0.8.7"
hex-slice = "0.1.4"
chrono = "0.4.37"
rdkafka = "0.36.2"
gstreamer = { version = "0.22", optional = true }
gstreamer-app = { version = "0.22", optional = true }
gstreamer-video = { version = "0.22", optional = true, features = ["v1_20"] }
crossbeam = "0.8.4"
image = "0.25.1"
base64 = "0.22.0"
imageproc = "0.24.0"
datetime = "0.5.2"
crc = "3.2.1"
img_hash = { version = "3.2.0", optional = true }
opencv = { version = "0.91.1", default-features = false, optional = true, features = [
    "img_hash",
    "clang-runtime",
    "rgb",
    "imgcodecs",
] }
mpeg2ts-reader = "0.16.0"
scte35-reader = "0.15.0"
h264-reader = "0.7.0"
