[package]
name = "rscap"
description = "MpegTS Stream Analysis Probe for PID MAP information"
keywords = ["broadcast", "mpegts", "pcap"]
categories = ["command-line-utilities"]
readme = "README.md"
license-file = "LICENSE"
homepage = "https://github.com/groovybits/rscap"
repository = "https://github.com/groovybits/rscap"
authors = ["Chris Kennedy"]
version = "0.8.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
default = []
dpdk_enabled = ["capsule"]

[profile.release-with-debug]
inherits = "release"
debug = true

[dependencies]
capsule = { version = "0.1.5", optional = true }
pcap = { version = "1.1.0", features = ["all-features", "capture-stream"] }
futures = "0.3"
log = "0.4"
env_logger = "0.9"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
lazy_static = "1.4.0"
clap = { version = "4.4.11", features = ["derive", "env"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
anyhow = "1.0.79"
sysinfo = "0.23.9"
once_cell = "1.5.2"
ahash = "0.8.7"
hex-slice = "0.1.4"
chrono = "0.4.37"
crossbeam = "0.8.4"
image = "0.25.1"
base64 = "0.22.0"
imageproc = "0.24.0"
datetime = "0.5.2"
crc = "3.2.1"
