[package]
name = "rsprobe"
description = "MpegTS Stream Analysis PCAP Probe for PID MAP information"
keywords = ["broadcast", "mpegts", "pcap"]
categories = ["command-line-utilities"]
readme = "README.md"
license-file = "LICENSE"
homepage = "https://github.com/groovybits/rscap"
repository = "https://github.com/groovybits/rscap"
authors = ["Chris Kennedy"]
version = "0.8.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
default = []
dpdk_enabled = ["capsule"]

[profile.release-with-debug]
inherits = "release"
debug = true

[dependencies]
capsule = { version = "0.1.5", optional = true }
pcap = { version = "1.1.0", features = ["all-features", "capture-stream"] }
futures = "0.3"
log = "0.4"
env_logger = "0.9"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
lazy_static = "1.4.0"
clap = { version = "4.4.11", features = ["derive", "env"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
anyhow = "1.0.79"
ahash = "0.8.7"
